--- a/frontend/ChatBot.html
+++ b/frontend/ChatBot.html
@@ -3,63 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interview ChatBot</title>
+    <title>Interview Chatbot</title>
     <link rel="stylesheet" href="ChatBotStyle.css">
 </head>
 <body>
-    <div class="top-bar">
-        <div class="title">Interview ChatBot</div>
-        <div class="user-logo">
-            <i class="fas fa-user"></i> <!-- Font Awesome user icon -->
-            <div class="dropdown-content">
-                <a href="main_page.html">Home</a>
-                <a href="resume1.html">Resume Analyzer</a>
-                <a href="resume2.html">Resume Analyzer Result</a>
+    <div class="chat-container">
+        <div class="chat-header">
+            <h1>INTERVIEW CHAT-BOTS</h1>
+            <p>You are interviewing for the position of AI Engineer</p>
+        </div>
+        <div class="chat-box" id="chat-box">
+            <div class="message bot">
+                <p>Tell me about yourself</p>
+            </div>
+            <div class="message user">
+                <p>My name is Mariam Azlina. I am a seasoned AI Engineer at SLB Company for 5 years. My area of expertise is NLP, Machine Learning, and Computer Vision. I've worked on various projects, collaborating with teams to develop and deploy AI solutions.</p>
+            </div>
+            <div class="message bot">
+                <p>Can you provide an example of a challenging AI project you've worked on in the past, and how you contributed to its success?</p>
             </div>
         </div>
+        <div class="chat-input">
+            <input type="text" id="user-input" placeholder="Write here ....">
+        </div>
     </div>
-
-    <div class="chat-container">
-        <div class="chat-messages" id="chat-messages"></div>
-        <form id="chat-form">
-            <input type="text" id="chat-input" placeholder="Type your message here..." autocomplete="off">
-            <button type="submit">Send</button>
-        </form>
-    </div>
-
-    <script>
-        const chatForm = document.getElementById('chat-form');
-        const chatMessages = document.getElementById('chat-messages');
-        const chatInput = document.getElementById('chat-input');
-
-        chatForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const userMessage = chatInput.value;
-            addMessage('You', userMessage);
-
-            try {
-                const response = await fetch('http://localhost:5000/chatbot', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ message: userMessage })
-                });
-                const data = await response.json();
-                addMessage('Bot', data.reply);
-            } catch (error) {
-                console.error('Error:', error);
-                addMessage('Bot', 'Sorry, there was an error processing your message.');
-            }
-
-            chatInput.value = '';
-        });
-
-        function addMessage(sender, message) {
-            const messageElement = document.createElement('div');
-            messageElement.className = 'message';
-            messageElement.innerHTML = `<strong>${sender}:</strong> ${message}`;
-            chatMessages.appendChild(messageElement);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-        }
-    </script>
+    <script src="ChatBot.js"></script>
 </body>
 </html>
